# uwu

./: README.md  pyproject.toml
src/uwu/: __init__.py  cli.py
src/uwu/data/: template.tex
