[project]
name = "uwu"
version = "0.1.0"
description = "Scaffold and build LaTeX homework assignments"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
uwu = "uwu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uwu"]

[tool.hatch.build.targets.wheel.force-include]
"src/uwu/data/template.tex" = "uwu/data/template.tex"
